--- a/assets/css/flexbox.css
+++ b/assets/css/flexbox.css
@@ -244,7 +244,7 @@ div.proyect-up__image {
 }
 
 .proyect-up__image img {
-  height: 8vh;
+  width: 100%;
   border-radius: 5px;
   margin-left: auto;
   margin-right: auto;
