--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -42,7 +42,7 @@ nav.menu a::after {
   display: block;
   position: absolute;
   left: 50%;
-  bottom: 0;
+  bottom: -5px;
   width: 0;
   height: 2px;
   background-color: var(--main-color-light);
